--- a/static/index.html
+++ b/static/index.html
@@ -22,6 +22,7 @@
         white-space: pre;
         border: 1px solid black;
         background-color: #eee;
+        padding: 10px;
       }
 
       select, section {
