--- a/static/index.html
+++ b/static/index.html
@@ -75,9 +75,11 @@
         return;
 
       this.generating = true;
+      const form = new FormData();
+      form.append('prompt', this.prompt);
       this.output = await (await fetch(`/api/${this.mode}`, {
         method: 'POST',
-        body: JSON.stringify({ prompt: this.prompt })
+        body: form
       })).json();
       this.generating = false;
     }
